--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <title>Jamie Tracy Portfolio</title>
   </head>
   <body>
-    <script src="../src/index.js"></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
