--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Jamie Tracy Portfolio</title>
   </head>
   <body>
-    <script src="/src/App.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
